# gtest-bare

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  math_helpers.cpp  math_helpers.h
tests/: CMakeLists.txt  math_tests.cpp
